# stardate

./: .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pre-commit.yml
examples/: pelican-stardate.py
stardate_goddard/: __init__.py
